ajout modifie le texte

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>Cour HTML</h1>
     <div class="image_content content">
         <code>
+            < img src="img/portrait.jpg" alt="portrait de Joseph Gonzalez"><br>
             dans l'exemple la balise img possède deux attribut src et alt <br>
             <ul>
                 <li>src sert a mettre le chemin de l'image pour pouvoir la voir </li>
@@ -26,6 +27,7 @@
     </div>
     <div class="content">
         <code>
+            < a class="center" href="">mon lien</ a><br>
             la balise a est un lien , ici nous avons mis un seul attribut<br>
             <ul>
                 <li>le href sert a renseigner son lien </li>
@@ -57,6 +59,29 @@
             <li>élément</li>
             </li>
         </ul>
+    </div>
+    <div class="content">
+        <code>
+            nous avons vous le caractère de l'espace qui est &nbsp;
+            <ul>
+                <li>ne l'utiliser pas trop sinon vous risquez de mourir dans la tête de greg comme le br </li>
+            </ul>
+        </code>
+        <p class="center">je &nbsp; le &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;teste</p>
+    </div>
+    <div class="content">
+        <code>
+            nous avons vu aussi que nous pouvions mettre du texte en évidence nous allons utiliser em et strong
+            ce sont deux balise html 
+            exemple: < em></ em> < strong ></ strong> (pour que cela fonctionne il faut attacher le em ou le strong a ca <)
+            <ul>
+                <li>em sert a mettre le texte en italique</li>
+                <li>strong sert a mettre le text en gras</li>
+            </ul>
+        </code>
+        <div class="center">
+            <p>aujourd hui <em>j'ai du renté</em>  à la <strong>maison </strong> (maison est en gras)(j'ai du rentré en italique)</p>
+        </div>
     </div>
 </body>
 
