ajout de contenu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Cour HTML</h1>
     <div class="image_content content">
         <code>
-            < img src="img/portrait.jpg" alt="portrait de Joseph Gonzalez"><br>
+            &lt;img src="img/portrait.jpg" alt="portrait de Joseph Gonzalez"&gt;<br>
             dans l'exemple la balise img possède deux attribut src et alt <br>
             <ul>
                 <li>src sert a mettre le chemin de l'image pour pouvoir la voir </li>
@@ -27,7 +27,7 @@
     </div>
     <div class="content">
         <code>
-            < a class="center" href="">mon lien</ a><br>
+            &lt;a href=""&gt;mon lien&lt;/a&gt;<br>
             la balise a est un lien , ici nous avons mis un seul attribut<br>
             <ul>
                 <li>le href sert a renseigner son lien </li>
@@ -73,7 +73,7 @@
         <code>
             nous avons vu aussi que nous pouvions mettre du texte en évidence nous allons utiliser em et strong
             ce sont deux balise html 
-            exemple: < em></ em> < strong ></ strong> (pour que cela fonctionne il faut attacher le em ou le strong a ca <)
+            exemple: &lt;em&gt;je suis en italique&lt;/em&gt; &lt;strong&gt;je suis en gras &lt;/strong&gt;
             <ul>
                 <li>em sert a mettre le texte en italique</li>
                 <li>strong sert a mettre le text en gras</li>
@@ -83,6 +83,31 @@
             <p>aujourd hui <em>j'ai du renté</em>  à la <strong>maison </strong> (maison est en gras)(j'ai du rentré en italique)</p>
         </div>
     </div>
+    <div class="content">
+        <code>
+            c'est une liste déordonné 
+            voici les balises
+            &lt;dl&gt; &lt;/dl&gt;
+            &lt;dt&gt; &lt;/dt&gt;
+            &lt;dd&gt; &lt;/dd&gt;
+            <ul>
+                <li>dl va etre la </li>
+                <li>dt va etre l'element de la liste</li>
+                <li>dd va être l'items de l'élément dans la liste</li>
+            </ul>
+        </code>
+        <div class="center">
+            <dl>
+                <dt>kiwi</dt>
+                <dd>c'est un fruit</dd>
+                <dd>c'est un oiseau</dd>
+                <dt>tomate</dt>
+                <dd>c'est un fruit</dd>
+                <dd>c'est un légume</dd>
+            </dl>
+        </div>
+    </div>
+
 </body>
 
 </html>
